edit own profile, admin modal spacing fix

--- a/src/Pages/Profile/Profile.scss
+++ b/src/Pages/Profile/Profile.scss
@@ -5,6 +5,17 @@
     flex-direction: column;
     align-items: center;
 
+    .name-and-edit {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .button {
+            display: flex;
+            gap: 5px;
+        }
+    }
+
     .header {
         margin: 10px;
     }
@@ -13,19 +24,30 @@
         height: fit-content;
         min-width: 50%;
         background-color: $accent-white;
-        // margin-top: 15px;
         padding: 30px;
         border-radius: 9px;
         box-shadow: 0px 0px 5px gainsboro;
+
     
     }
     
     .info {
-        padding-left: 5px;
-        margin-bottom: 10px;
+        padding-left: 15px;
     }
+  
     .info-name {
+        &.padded {
+            margin-top: 10px;
+        }
+
         font-style: italic;
+    }
+
+    .table {
+
+        .table-cell {
+            padding: 8px 16px;
+        }
     }
 }
 
